# ProjecManageQualityTutorial

./: .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  Makefile  black.toml  pyproject.toml  readme.md  requirements.txt
src/: demo.py
tests/: __init__.py  test_demo.py
